# django-starter-kit

./: .dockerignore  .gitignore  AGENT_LOGS.md  BRIEF.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
apps/api/: serializers.py  urls.py  views.py
apps/core/: analytics.py  models.py  search.py  tasks.py
apps/users/: models.py  signals.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  celery_app.py  routing.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py  production.py
dev/: Dockerfile  docker-compose.dev.yml  init.sh  supervisord.conf
frontend/: package.json  vite.config.js  vite.config.mjs
frontend/src/css/: styles.css
frontend/src/js/: main.js
frontend/src/js/controllers/: navbar.js
templates/: _footer.html  _header.html  base.html
templates/account/: login.html  logout.html  password_reset.html  signup.html
